[package]
name = "timer"
version = "0.1.0"
edition = "2021"
authors = ["vvh413"]
description = "Simple cli timer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.16", features = ["derive"] }
humantime = "2.1.0"
tokio = { version = "1.29.1", features = ["full"] }
