[package]
name = "timer"
version = "0.1.1"
edition = "2021"
authors = ["vvh413"]
description = "Simple cli timer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
eyre = "0.6.12"
humantime = "2.1.0"
tokio = { version = "1.43.0", features = ["full", "io-std", "io-util", "macros", "rt-multi-thread", "sync"] }
